# desafio_tecnico_rc

./: 404.html  README.md  apresentacao.pptx  desafio.pbix  desafio_final.pbix  etl.ipynb  exctract.py  index.html  mkdocs.yml  pyproject.toml
dados/: Pedidos.csv  dim_clientes.csv  dim_data.csv  dim_pedidos.csv  dim_produtos.csv  fato_vendas.csv
docs/: index.md
search/: search_index.json
site/: 404.html  index.html
site/search/: search_index.json
