[project]
name = "desafio-tecnico-rc"
version = "0.1.0"
description = ""
authors = [
    {name = "lucasftorres",email = "lucaas.torresf192@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "pandas (>=2.3.1,<3.0.0)",
    "numpy (>=2.3.2,<3.0.0)",
    "mkdocs (>=1.6.1,<2.0.0)",
    "taskipy (>=1.14.1,<2.0.0)",
    "pymdown-extensions (>=10.16.1,<11.0.0)",
    "mkdocs-material (>=9.6.17,<10.0.0)",
    "mkdocstrings-python (>=1.17.0,<2.0.0)",
    "pygments (>=2.19.2,<3.0.0)"

]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
kill = "kill -9 $(lsof -t -i :8000)"
